2010-10-08  Glenn Morris  <rgm@gnu.org>

	* net/browse-url.el (browse-url-xdg-open): Shell-quote url.  (Bug#7166)

2010-10-07  Chong Yidong  <cyd@stupidchicken.com>

	* cus-edit.el (custom-variable, custom-face): Doc fix.
	(custom-face-edit): Add value-create attribute.
	(custom-face-edit-value-create)
	(custom-face-edit-value-visibility-action): New functions.  Hide
	unused face attributes by default, and add a visibility toggle.
	(custom-face-edit-deactivate): Show empty values with shadow face.
	(custom-face-selected): Only use this for face specs with default
	attributes.
	(custom-face-value-create): Cleanup.

	* wid-edit.el (widget-checklist-value-create): Use dolist.
	(widget-checklist-match-find): Make second arg optional.

2010-10-07  Glenn Morris  <rgm@gnu.org>

	* hilit-chg.el (hilit-chg-get-diff-info, hilit-chg-get-diff-list-hk):
	Prefix things.

	* emacs-lisp/shadow.el (shadow-font-lock-keywords)
	(load-path-shadows-mode, list-load-path-shadows): Rename shadow-mode to
	load-path-shadows-mode, update references.
	(load-path-shadows-font-lock-keywords, load-path-shadows-find-file):
	Rename variable and button.
	(list-load-path-shadows): Update button caller.

2010-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-bnf-classify): New function.
	(smie-bnf-precedence-table): Use it to remember the closers/openers.
	(smie-merge-prec2s): Handle those new entries.
	(smie-prec2-levels): Only set precedence to nil for actual
	openers/closers.
	* progmodes/octave-mod.el (octave-smie-op-levels): Remove dummy entry
	that is now unnecessary.

2010-10-07  Miles Bader  <miles@gnu.org>

	* emacs-lisp/regexp-opt.el (regexp-opt): Add `symbols' mode.

2010-10-07  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (mail-sendmail-delimit-header, mail-header-end)
	(mail-position-on-field): Remove declarations.
	(mail-position-on-field): Autoload it.
	(rmail-retry-failure): Replace use of mail-sendmail-delimit-header